[package]
name = "syncing-cli"
version = "0.0.1"
description = "Syncling any data with the terminal interface."
edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
