[package]
name = "syncing"
version = "0.0.1"
description = "Syncing overall library includes all the components."
edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
